force-app/main/default/objects/Broker_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHRM Registration Done</fullName>
                <label>Broker Registration Done</label>
            </value>
            <value>
                <fullName>Rejected - Rejected by CHRM Manager</fullName>
                <label>Rejected by CHRM Manager</label>
            </value>
            <value>
                <fullName>Pending with CHRM OPS</fullName>
            </value>
            <value>
                <fullName>Rejected - Rejected by CHRM OPS</fullName>
                <label>Rejected by CHRM OPS</label>
            </value>
            <value>
                <fullName>Pending with Audit</fullName>
            </value>
            <value>
                <fullName>Pending with Ashish Parakh</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit</fullName>
            </value>
            <value>
                <fullName>NOC Generated</fullName>
            </value>
            <value>
                <fullName>Agreement created and sent for signature</fullName>
            </value>
            <value>
                <fullName>NOC Is in Process</fullName>
            </value>
            <value>
                <fullName>Agreement - approved by CHRM OPS</fullName>
            </value>
            <value>
                <fullName>Pending with CHRM / Rejected with CHRM</fullName>
            </value>
            <value>
                <fullName>All missing documents uploaded</fullName>
            </value>
            <value>
                <fullName>Approved - Agreement Is in process</fullName>
                <label>Agreement Is in process</label>
            </value>
            <value>
                <fullName>Approved - by Ashish Parakh</fullName>
            </value>
            <value>
                <fullName>Agreement Generated</fullName>
            </value>
            <value>
                <fullName>Executed Agreement sent to CRHM</fullName>
                <label>Executed Agreement sent to CHRM</label>
            </value>
            <value>
                <fullName>Executed Agreement sent to broker</fullName>
            </value>
            <value>
                <fullName>CP/SC ID in Process</fullName>
                <label>Signed Agreement Received - Documents Awaited</label>
            </value>
            <value>
                <fullName>Pending with CHRM Manager</fullName>
            </value>
            <value>
                <fullName>CP/SC ID Generated</fullName>
            </value>
            <value>
                <fullName>Agreement created and send for Review</fullName>
                <label>Agreement created and sent for Review</label>
            </value>
            <value>
                <fullName>Agreement created and sent to witness</fullName>
            </value>
            <value>
                <fullName>Send for Approval</fullName>
                <label>Sent for Final Signatures</label>
            </value>
            <value>
                <fullName>Agreement Executed Manually</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Not Executed - Terminated</fullName>
            </value>
            <value>
                <fullName>Cancelled Agreement - As requested by Broker</fullName>
            </value>
            <value>
                <fullName>Cancelled Agreement- Broker Category Change</fullName>
            </value>
            <value>
                <fullName>Cancelled Agreement- Ownership Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>