force-app/main/default/objects/Broker_Registration__c/fields/Telephone_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Country_Code__c</fullName>
    <label>Telephone Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_With_Codes</valueSetName>
    </valueSet>
</CustomField>