force-app/main/default/objects/Broker_Registration__c/fields/Third_Signatory_Email__c.field-meta.xml
<CustomField>
    <fullName>Third_Signatory_Email__c</fullName>
    <label>Third Signatory Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>