force-app/main/default/objects/Broker_Registration__c/fields/Third_Signatory_Email_E__c.field-meta.xml
<CustomField>
    <fullName>Third_Signatory_Email_E__c</fullName>
    <label>Third Signatory Email (E)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>