force-app/main/default/objects/Broker_Registration__c/fields/Third_Signatory_Email_M__c.field-meta.xml
<CustomField>
    <fullName>Third_Signatory_Email_M__c</fullName>
    <label>Third Signatory Email (M)</label>
    <type>TextArea</type>
</CustomField>