force-app/main/default/objects/Broker_Registration__c/fields/Type_of_Name_change__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Name_change__c</fullName>
    <label>Type of Name change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete Name Change</fullName>
            </value>
            <value>
                <fullName>L.L.C added</fullName>
            </value>
            <value>
                <fullName>Name Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>