force-app/main/default/objects/Broker_Registration__c/fields/Witness_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Witness_Email_1__c</fullName>
    <label>Witness Email</label>
    <type>Email</type>
</CustomField>