force-app/main/default/objects/Broker_Registration__c/fields/X30_Days_Expire_Notiifciation_Date__c.field-meta.xml
<CustomField>
    <fullName>X30_Days_Expire_Notiifciation_Date__c</fullName>
    <formula>Broker_Expiry_Date__c - 30</formula>
    <label>30 Days Expire Notiifciation Date</label>
    <type>Date</type>
</CustomField>