force-app/main/default/objects/Broker_Registration__c/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <label>Renewal</label>
</RecordType>