force-app/main/default/objects/Broker_Registration__c/listViews/Agreement_created_and_sent_for_signatures.listView-meta.xml
<ListView>
    <fullName>Agreement_created_and_sent_for_signatures</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Name_as_per_trade_license__c</columns>
    <columns>NAME</columns>
    <columns>Broker_Category__c</columns>
    <columns>Status__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Agreement created and sent for signature</value>
    </filters>
    <label>Agreement created and sent for signature</label>
    <sharedTo>
        <group>CHRM_Team</group>
    </sharedTo>
</ListView>