force-app/main/default/objects/Broker_Registration__c/listViews/All_List.listView-meta.xml
<ListView>
    <fullName>All_List</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Broker_Category__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All List</label>
    <sharedTo>
        <role>Audit</role>
    </sharedTo>
</ListView>