force-app/main/default/objects/Broker_Registration__c/listViews/Broker_Category_Queue.listView-meta.xml
<ListView>
    <fullName>Broker_Category_Queue</fullName>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CHRM_Manager_Approval_Date__c</columns>
    <columns>Name_as_per_trade_license__c</columns>
    <columns>NAME</columns>
    <columns>Broker_Category__c</columns>
    <columns>CHRM_Manager_Email__c</columns>
    <columns>Status__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending with CHRM OPS,Pending with CHRM Manager</value>
    </filters>
    <filters>
        <field>Broker_Category__c</field>
        <operation>equals</operation>
        <value>Broker - RERA,Broker - UAE,Broker - Intnl</value>
    </filters>
    <label>Broker Category Queue  v</label>
    <sharedTo>
        <group>CHRM_Ops</group>
        <role>Channel_relationship_manager</role>
    </sharedTo>
</ListView>