force-app/main/default/objects/Broker_Registration__c/listViews/Broker_Reg_Channel_Ops_Approval_Queue_Broker_Registration.listView-meta.xml
<ListView>
    <fullName>Broker_Reg_Channel_Ops_Approval_Queue_Broker_Registration</fullName>
    <filterScope>Queue</filterScope>
    <label>Broker Reg Channel Ops Approval Queue</label>
    <queue>Broker_Reg_Channel_Ops_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>