force-app/main/default/objects/Broker_Registration__c/listViews/Broker_Registration_Audit_Approval_Queue_Broker_Registration.listView-meta.xml
<ListView>
    <fullName>Broker_Registration_Audit_Approval_Queue_Broker_Registration</fullName>
    <filterScope>Queue</filterScope>
    <label>Broker Registration Audit Approval Queue</label>
    <queue>Broker_Registration_Audit_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>