force-app/main/default/objects/Broker_Registration__c/listViews/CRM.listView-meta.xml
<ListView>
    <fullName>CRM</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Name_as_per_trade_license__c</columns>
    <columns>NAME</columns>
    <columns>Broker_Category__c</columns>
    <columns>Status__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>CRM</label>
    <sharedTo>
        <role>Channel_relationship_manager</role>
    </sharedTo>
</ListView>