force-app/main/default/objects/Broker_Registration__c/listViews/Pending_With_Audit_V.listView-meta.xml
<ListView>
    <fullName>Pending_With_Audit_V</fullName>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Assigned_to_Audit_Date__c</columns>
    <columns>NAME</columns>
    <columns>Broker_Category__c</columns>
    <columns>CHRM_Manager_Email__c</columns>
    <columns>Status__c</columns>
    <columns>Name_as_per_trade_license__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending with Audit</value>
    </filters>
    <label>Pending With Audit V</label>
    <sharedTo>
        <role>Audit</role>
    </sharedTo>
</ListView>