force-app/main/default/objects/Broker_Registration__c/listViews/Pending_with_CHRM_Manager_Adnan_Test.listView-meta.xml
<ListView>
    <fullName>Pending_with_CHRM_Manager_Adnan_Test</fullName>
    <columns>My_Team__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Name_as_per_trade_license__c</columns>
    <columns>NAME</columns>
    <columns>Broker_Category__c</columns>
    <columns>CHRM_Manager__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Team__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Pending with CHRM Manager TEST</label>
    <sharedTo>
        <role>AVP_Channel_Relations</role>
        <role>CRM_TL3</role>
        <role>CRM_TL4</role>
        <role>CRm_TL_2</role>
    </sharedTo>
</ListView>